--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -6,10 +6,11 @@ nav {
   }
   
   nav a {
-    color: white;
+    color: #6aa84f;
     text-decoration: none;
   }
   
   nav a.active {
     font-weight: bold;
+    color: #971A1A;
   }
